# Alcadeus0

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SETUP.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  validate_setup.py
backend/app/: main.py
backend/app/api/: accounts.py  health.py
backend/app/core/: config.py
backend/app/database/: engine.py
backend/app/models/: __init__.py  account.py  invoice.py  job.py  technician.py
backend/app/schemas/: __init__.py  account.py  health.py  invoice.py  job.py  technician.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  __init__.py
